cmake_minimum_required(VERSION 3.6)
project(xv6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    xv6/.gdbinit.tmpl
    xv6/_date
    xv6/_PKdatetests
    xv6/_YOtests
    xv6/asm.h
    xv6/bio.c
    xv6/bootasm.S
    xv6/bootmain.c
    xv6/buf.h
    xv6/cat.c
    xv6/console.c
    xv6/date.c
    xv6/date.h
    xv6/defs.h
    xv6/dot-bochsrc
    xv6/echo.c
    xv6/elf.h
    xv6/entry.S
    xv6/entryother.S
    xv6/exec.c
    xv6/fcntl.h
    xv6/file.c
    xv6/file.h
    xv6/forktest.c
    xv6/fs.c
    xv6/fs.h
    xv6/gdbutil
    xv6/grep.c
    xv6/halt.c
    xv6/ide.c
    xv6/init.c
    xv6/initcode.S
    xv6/ioapic.c
    xv6/kalloc.c
    xv6/kbd.c
    xv6/kbd.h
    xv6/kernel.ld
    xv6/kill.c
    xv6/lapic.c
    xv6/ln.c
    xv6/log.c
    xv6/ls.c
    xv6/main.c
    xv6/Makefile
    xv6/memlayout.h
    xv6/mkdir.c
    xv6/mkfs.c
    xv6/mmu.h
    xv6/mp.c
    xv6/mp.h
    xv6/param.h
    xv6/picirq.c
    xv6/pipe.c
    xv6/PKdatetests.c
    xv6/PKetimetests.c
    xv6/PKlib.c
    xv6/PKlib.h
    xv6/PKprintf.c
    xv6/PKproctests.c
    xv6/PKpstests.c
    xv6/pr.pl
    xv6/print_mode.c
    xv6/printf.c
    xv6/proc.c
    xv6/proc.h
    xv6/ps.c
    xv6/README
    xv6/rm.c
    xv6/runoff
    xv6/runoff.list
    xv6/runoff.spec
    xv6/runoff1
    xv6/sh.c
    xv6/sign.pl
    xv6/spinlock.c
    xv6/spinlock.h
    xv6/stat.h
    xv6/stressfs.c
    xv6/string.c
    xv6/swtch.S
    xv6/syscall.c
    xv6/syscall.h
    xv6/sysfile.c
    xv6/sysproc.c
    xv6/time.c
    xv6/timer.c
    xv6/toc.ftr
    xv6/toc.hdr
    xv6/trap.c
    xv6/trapasm.S
    xv6/traps.h
    xv6/types.h
    xv6/uart.c
    xv6/ulib.c
    xv6/umalloc.c
    xv6/uproc.h
    xv6/user.h
    xv6/usertests.c
    xv6/usys.S
    xv6/vectors.pl
    xv6/vm.c
    xv6/wc.c
    xv6/x86.h
    xv6/zombie.c
    .gitignore)

add_executable(xv6 ${SOURCE_FILES})